<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLV_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLV_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="166dp" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/GLH_2"
        app:layout_constraintEnd_toStartOf="@+id/GLV_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GLV_1"
        app:layout_constraintTop_toTopOf="@+id/GLH_1"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GLV_2"
        app:layout_constraintStart_toStartOf="@+id/GLV_1"
        app:layout_constraintTop_toTopOf="@+id/GLH_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/hello"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_short" />

                <Button
                    android:id="@+id/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/android" />

                <Button
                    android:id="@+id/sawtooth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sawtooth" />

                <Button
                    android:id="@+id/embedded_soundtrack"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/embedded_soundtrack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reverb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reverb" />

                <Button
                    android:id="@+id/mute_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_uri" />

                <Button
                    android:id="@+id/enable_stereo_position_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_stereo_position_uri" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/uri_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uri_spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/uri_soundtrack"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uri_soundtrack" />

                <Button
                    android:id="@+id/pause_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pause_uri" />

                <Button
                    android:id="@+id/play_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_uri" />

                <Button
                    android:id="@+id/loop_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loop_uri" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/mute_left_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_left_uri" />

                <Button
                    android:id="@+id/mute_right_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_right_uri" />

                <Button
                    android:id="@+id/solo_left_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/solo_left_uri" />

                <Button
                    android:id="@+id/solo_right_uri"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/solo_right_uri" />
            </LinearLayout>

            <Button
                android:id="@+id/channels_uri"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/channels_uri" />

            <SeekBar
                android:id="@+id/volume_uri"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/volume_uri" />

            <SeekBar
                android:id="@+id/pan_uri"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pan_uri" />

            <Button
                android:id="@+id/record"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record" />

            <Button
                android:id="@+id/playback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/playback" />
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>